--- a/src/Pages/FAQ/FAQ.css
+++ b/src/Pages/FAQ/FAQ.css
@@ -1,4 +1,17 @@
+.faq_title {
+    color: white;
+    font-size: 28px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
 .faq_questions {
     width: 70%;
     margin: 0px auto;
+}
+
+@media (max-width: 769px) {
+    .faq_questions {
+        width: 90%;
+    }
 }
