--- a/src/Menu/SideDrawer/SideDrawer.css
+++ b/src/Menu/SideDrawer/SideDrawer.css
@@ -36,10 +36,11 @@
 
 .side_Drawer a {
     color: black;
+    margin: 0.5rem 0;
     font-weight: bold;
     text-decoration: none;
     font-size: 1.2rem;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 .side_Drawer a:hover,
